fixed background color and header spacing

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,6 +14,7 @@ body {
     padding: 0;
     font-family: "Red Hat Display", sans-serif;
     text-align: center;
+    background-color: $light;
 }
 
 a,
